Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "7hzEielIhbr3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1007,10 +1007,22 @@
         "staring through the window were thinking as she vacuumed her apartment."
       ],
       "metadata": {
-        "id": "Ni92vf3-0-py"
+        "id": "Ni92vf3-0-py",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a12b022a-2931-4e4d-f185-11164b290b04"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing /home/mpi/input_file.txt\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1063,10 +1075,22 @@
         "#endif // GREP_H"
       ],
       "metadata": {
-        "id": "HX5QU2TRgIoY"
+        "id": "HX5QU2TRgIoY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14936516-da04-4259-c7ea-064a55ba576a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing /home/mpi/grep.h\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1101,8 +1125,8 @@
         "  std::vector<std::string> input_lines;\n",
         "\n",
         "  grep::get_lines(input_lines, argv[2]);\n",
-        "  grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
-        "  grep::print_result(local_filtered_lines, local_lines_number);\n",
+        "  //grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
+        "  //grep::print_result(local_filtered_lines, local_lines_number);\n",
         "\n",
         "  MPI_Finalize;\n",
         "\n",
@@ -1110,10 +1134,22 @@
         "}"
       ],
       "metadata": {
-        "id": "I7BYxsWPgNKs"
+        "id": "I7BYxsWPgNKs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab79576d-e902-47f6-e6e3-135f53719139"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting /home/mpi/grep-main.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1129,15 +1165,171 @@
       "source": [
         "%%writefile /home/mpi/grep.cpp\n",
         "\n",
+        "#include <fstream>\n",
+        "#include <iostream>\n",
+        "#include <sstream>\n",
+        "#include <string>\n",
+        "\n",
+        "#include <mpi.h>\n",
+        "\n",
         "#include \"grep.h\"\n",
         "\n",
-        "/* YOUR CODE GOES HERE */"
+        "namespace grep{\n",
+        "  void get_lines(std::vector<std::string> &input_string, const std::string &file_name){\n",
+        "\n",
+        "    /* get the rank of THIS process */\n",
+        "    int rank, size;     // for storing this process' rank, and the number of processes\n",
+        "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
+        "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
+        "\n",
+        "    std::vector<std::string> rows;\n",
+        "\n",
+        "\n",
+        "    /* only process 0 can read the hole file */\n",
+        "    if (rank == 0){\n",
+        "\n",
+        "      int num_lines = 0;\n",
+        "      std::string line;\n",
+        "      unsigned int chunkSize;\n",
+        "\n",
+        "      /* open the main file and count the total number of rows */\n",
+        "      std::ifstream my_file (file_name);\n",
+        "      for(std::string line; std::getline (my_file, line);){\n",
+        "        num_lines++;\n",
+        "        rows.push_back(line);\n",
+        "      }\n",
+        "\n",
+        "      std::cout << \"The number of lines in total is: \" << num_lines << std::endl;\n",
+        "      \n",
+        "      int sendcounts[size];    // array describing how many rows to send to each process\n",
+        "      int displs[size];        // array describing the displacements where each segment begins\n",
+        "\n",
+        "      int rem = num_lines % size; // rows remaining after division among processes\n",
+        "      int sum = 0;                // Sum of counts. Used to calculate displacements\n",
+        "\n",
+        "      // calculate send counts and displacements\n",
+        "      for (int i = 0; i < size; i++) {\n",
+        "          sendcounts[i] = num_lines / size;\n",
+        "          if (rem > 0) {\n",
+        "              sendcounts[i]++;\n",
+        "              rem--;\n",
+        "          }\n",
+        "\n",
+        "          displs[i] = sum;\n",
+        "          sum += sendcounts[i];\n",
+        "\n",
+        "          std::cout << \"The process \" << i << \"will reads \" << sendcounts[i] << \"rows, that starts from index \" << displs[i] << std::endl;\n",
+        "      }\n",
+        "\n",
+        "      // divide the rows among processes as described by sendcounts and displs\n",
+        "      MPI_Scatterv(&rows[0], sendcounts, displs, MPI_CHAR, &input_string, sendcounts[0], MPI_CHAR, 0, MPI_COMM_WORLD);\n",
+        "\n",
+        "    }\n",
+        "\n",
+        "    \n",
+        "\n",
+        "  }\n",
+        "}"
       ],
       "metadata": {
-        "id": "lGyleRylgyAG"
+        "id": "lGyleRylgyAG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d938039d-fd79-4eb4-a819-f1bf5ff8470b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting /home/mpi/grep.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpicxx grep-main.cpp grep.cpp -o grep"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lOEr2Cz0ydsW",
+        "outputId": "0d68b663-fe3a-4f48-ee4c-ff225673d1d8"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /home/mpi\n",
+        "!mpiexec --allow-run-as-root -np 2 ./grep Dido input_file.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ddp3MCmr0uOd",
+        "outputId": "2c46bc0a-7015-4e35-ef49-0d11de97657f"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/home/mpi\n",
+            "src/tcmalloc.cc:283] Attempt to free invalid pointer 0x4c \n",
+            "The number of lines in total is: 939\n",
+            "The process 0will reads 470rows, that starts from index 0\n",
+            "The process 1will reads 469rows, that starts from index 470\n",
+            "[9acc800493bd:00298] *** Process received signal ***\n",
+            "[9acc800493bd:00298] Signal: Aborted (6)\n",
+            "[9acc800493bd:00298] Signal code:  (-6)\n",
+            "[9acc800493bd:00298] *** Process received signal ***\n",
+            "[9acc800493bd:00298] Signal: Segmentation fault (11)\n",
+            "[9acc800493bd:00298] Signal code: Address not mapped (1)\n",
+            "[9acc800493bd:00298] Failing at address: 0x4f\n",
+            "--------------------------------------------------------------------------\n",
+            "mpiexec has exited due to process rank 1 with PID 0 on\n",
+            "node 9acc800493bd exiting improperly. There are three reasons this could occur:\n",
+            "\n",
+            "1. this process did not call \"init\" before exiting, but others in\n",
+            "the job did. This can cause a job to hang indefinitely while it waits\n",
+            "for all processes to call \"init\". By rule, if one process calls \"init\",\n",
+            "then ALL processes must call \"init\" prior to termination.\n",
+            "\n",
+            "2. this process called \"init\", but exited without calling \"finalize\".\n",
+            "By rule, all processes that call \"init\" MUST call \"finalize\" prior to\n",
+            "exiting or it will be considered an \"abnormal termination\"\n",
+            "\n",
+            "3. this process called \"MPI_Abort\" or \"orte_abort\" and the mca parameter\n",
+            "orte_create_session_dirs is set to false. In this case, the run-time cannot\n",
+            "detect that the abort call was an abnormal termination. Hence, the only\n",
+            "error message you will receive is this one.\n",
+            "\n",
+            "This may have caused other processes in the application to be\n",
+            "terminated by signals sent by mpiexec (as reported here).\n",
+            "\n",
+            "You can avoid this message by specifying -quiet on the mpiexec command line.\n",
+            "--------------------------------------------------------------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
