Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +67,6 @@
       "cell_type": "code",
       "source": [
         "%%writefile /home/mpi/input_file.txt\n",
-        "\n",
         "There was something special about this little creature. Donna couldn't quite\n",
         "pinpoint what it was, but she knew with all her heart that it was true. It\n",
         "wasn't a matter of if she was going to try and save it, but a matter of how she\n",
@@ -1011,7 +1011,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a12b022a-2931-4e4d-f185-11164b290b04"
+        "outputId": "15c199dc-95fd-4ee2-ce7e-5cad874fe0ad"
       },
       "execution_count": 2,
       "outputs": [
@@ -1079,7 +1079,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14936516-da04-4259-c7ea-064a55ba576a"
+        "outputId": "a68d7ae6-fe0e-41b4-8246-4e64aaea3033"
       },
       "execution_count": 3,
       "outputs": [
@@ -1138,15 +1138,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab79576d-e902-47f6-e6e3-135f53719139"
+        "outputId": "c03910b1-bffe-4a49-deac-2c821c143728"
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting /home/mpi/grep-main.cpp\n"
+            "Writing /home/mpi/grep-main.cpp\n"
           ]
         }
       ]
@@ -1169,6 +1169,7 @@
         "#include <iostream>\n",
         "#include <sstream>\n",
         "#include <string>\n",
+        "#include <cstring>\n",
         "\n",
         "#include <mpi.h>\n",
         "\n",
@@ -1182,30 +1183,42 @@
         "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
         "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
         "\n",
-        "    std::vector<std::string> rows;\n",
+        "    int sendcounts_2[size];\n",
+        "    int sendcounts[size];    // array describing how many rows to send to each process\n",
+        "    int displs[size];        // array describing the displacements where each segment begins\n",
         "\n",
+        "    //std::vector<char*> rows;\n",
+        "    char rows[1000][81];\n",
+        "    int my_num_rows;\n",
+        "    //char rows[1000][81];\n",
+        "    //std::vector<char*> my_rows;\n",
         "\n",
-        "    /* only process 0 can read the hole file */\n",
+        "    /* only process 0 can read the whole file */\n",
         "    if (rank == 0){\n",
         "\n",
         "      int num_lines = 0;\n",
-        "      std::string line;\n",
-        "      unsigned int chunkSize;\n",
-        "\n",
+        "      \n",
         "      /* open the main file and count the total number of rows */\n",
         "      std::ifstream my_file (file_name);\n",
         "      for(std::string line; std::getline (my_file, line);){\n",
+        "        //std::cout << line.length() << std::endl;\n",
+        "        //num_char_each.push_back(line.length());\n",
+        "        \n",
+        "        std::strcpy(rows[num_lines], line.c_str());\n",
+        "        //rows[num_lines] = r;\n",
+        "        //for(int letter=0; letter < line.length(); letter++){\n",
+        "        //  rows.push_back(line[letter]);\n",
+        "        //}\n",
+        "        //std::cout << rows[num_lines] << std::endl;\n",
+        "        //std::cout << sizeof(rows[num_lines]) << std::endl;\n",
         "        num_lines++;\n",
-        "        rows.push_back(line);\n",
         "      }\n",
         "\n",
         "      std::cout << \"The number of lines in total is: \" << num_lines << std::endl;\n",
         "      \n",
-        "      int sendcounts[size];    // array describing how many rows to send to each process\n",
-        "      int displs[size];        // array describing the displacements where each segment begins\n",
-        "\n",
         "      int rem = num_lines % size; // rows remaining after division among processes\n",
         "      int sum = 0;                // Sum of counts. Used to calculate displacements\n",
+        "      int aux_count = 0;\n",
         "\n",
         "      // calculate send counts and displacements\n",
         "      for (int i = 0; i < size; i++) {\n",
@@ -1214,31 +1227,41 @@
         "              sendcounts[i]++;\n",
         "              rem--;\n",
         "          }\n",
-        "\n",
+        "          sendcounts[i]*=81;\n",
         "          displs[i] = sum;\n",
         "          sum += sendcounts[i];\n",
         "\n",
-        "          std::cout << \"The process \" << i << \"will reads \" << sendcounts[i] << \"rows, that starts from index \" << displs[i] << std::endl;\n",
+        "          std::cout << \"The process \" << i << \" will reads \" << sendcounts[i]/81 << \" rows, that starts from index \" << displs[i] << std::endl;\n",
+        "          std::cout << \"That are \" << sendcounts[i] << \" char!\" << std::endl;\n",
+        "          std::cout << \"Send the number of rows to each process\" << std::endl;\n",
+        "          MPI_Send(&sendcounts[i], 1, MPI_INT, i, 0, MPI_COMM_WORLD);\n",
+        "          aux_count = 0;\n",
         "      }\n",
-        "\n",
-        "      // divide the rows among processes as described by sendcounts and displs\n",
-        "      MPI_Scatterv(&rows[0], sendcounts, displs, MPI_CHAR, &input_string, sendcounts[0], MPI_CHAR, 0, MPI_COMM_WORLD);\n",
-        "\n",
+        "      \n",
         "    }\n",
+        "    MPI_Recv(&my_num_rows, 1, MPI_INT, 0, 0, MPI_COMM_WORLD, MPI_STATUS_IGNORE);\n",
+        "    std::cout << \"Process \" << rank << \" receives: \"<< my_num_rows << std::endl;\n",
+        "    char my_rows[my_num_rows][81] = {};\n",
+        "    std::cout << sizeof(my_rows)/sizeof(my_rows[0]) << std::endl;\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
+        "    MPI_Scatterv(&rows, sendcounts, displs, MPI_CHAR, &my_rows, my_num_rows*81, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
         "\n",
-        "    \n",
-        "\n",
+        "    for (int s=0; s < my_num_rows; s++){\n",
+        "      std::string line = my_rows[0];\n",
+        "      input_string.push_back(line);\n",
+        "    }\n",
         "  }\n",
         "}"
       ],
       "metadata": {
-        "id": "lGyleRylgyAG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d938039d-fd79-4eb4-a819-f1bf5ff8470b"
+        "id": "DabWL2E0Nt8q",
+        "outputId": "225874a3-4f98-4274-cab9-d916f50e47b1"
       },
-      "execution_count": 24,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -1260,9 +1283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "0d68b663-fe3a-4f48-ee4c-ff225673d1d8"
+        "outputId": "edc4facc-fb0a-4d4b-e723-1931ac6cc703"
       },
-      "execution_count": 25,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "stream",
@@ -1277,36 +1300,44 @@
       "cell_type": "code",
       "source": [
         "%cd /home/mpi\n",
-        "!mpiexec --allow-run-as-root -np 2 ./grep Dido input_file.txt"
+        "!mpiexec --allow-run-as-root -np 3 ./grep Dido input_file.txt"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddp3MCmr0uOd",
-        "outputId": "2c46bc0a-7015-4e35-ef49-0d11de97657f"
+        "outputId": "31aba037-55b5-46d3-e847-0fe766ff4a4f"
       },
-      "execution_count": 26,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/home/mpi\n",
-            "src/tcmalloc.cc:283] Attempt to free invalid pointer 0x4c \n",
-            "The number of lines in total is: 939\n",
-            "The process 0will reads 470rows, that starts from index 0\n",
-            "The process 1will reads 469rows, that starts from index 470\n",
-            "[9acc800493bd:00298] *** Process received signal ***\n",
-            "[9acc800493bd:00298] Signal: Aborted (6)\n",
-            "[9acc800493bd:00298] Signal code:  (-6)\n",
-            "[9acc800493bd:00298] *** Process received signal ***\n",
-            "[9acc800493bd:00298] Signal: Segmentation fault (11)\n",
-            "[9acc800493bd:00298] Signal code: Address not mapped (1)\n",
-            "[9acc800493bd:00298] Failing at address: 0x4f\n",
+            "The number of lines in total is: 938\n",
+            "The process 0 will reads 313 rows, that starts from index 0\n",
+            "That are 25353 char!\n",
+            "Send the number of rows to each process\n",
+            "The process 1 will reads 313 rows, that starts from index 25353\n",
+            "That are 25353 char!\n",
+            "Send the number of rows to each process\n",
+            "The process 2 will reads 312 rows, that starts from index 50706\n",
+            "That are 25272 char!\n",
+            "Send the number of rows to each process\n",
+            "Process 0 receives: 25353\n",
+            "Process 1 receives: 25353\n",
+            "Process 2 receives: 25272\n",
+            "25353\n",
+            "25272\n",
+            "25353\n",
+            "XR 1:of the ice sheet tended to scratch the rocks over which they rode. The scratches\n",
+            "XR 2:what he was supposed to do. That had been apparent from the beginning. That was\n",
+            "XR 0:There was something special about this little creature. Donna couldn't quite\n",
             "--------------------------------------------------------------------------\n",
             "mpiexec has exited due to process rank 1 with PID 0 on\n",
-            "node 9acc800493bd exiting improperly. There are three reasons this could occur:\n",
+            "node 227cfcf24558 exiting improperly. There are three reasons this could occur:\n",
             "\n",
             "1. this process did not call \"init\" before exiting, but others in\n",
             "the job did. This can cause a job to hang indefinitely while it waits\n",
