Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -47,10 +47,22 @@
         "!mkdir /home/mpi"
       ],
       "metadata": {
-        "id": "7hzEielIhbr3"
+        "id": "7hzEielIhbr3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "689d587c-819e-4d55-b959-61c83b66cba4"
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mkdir: cannot create directory ‘/home/mpi’: File exists\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1011,15 +1023,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15c199dc-95fd-4ee2-ce7e-5cad874fe0ad"
+        "outputId": "eda89da5-0b80-48a6-8f29-f6232a18b282"
       },
-      "execution_count": 2,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing /home/mpi/input_file.txt\n"
+            "Overwriting /home/mpi/input_file.txt\n"
           ]
         }
       ]
@@ -1079,15 +1091,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a68d7ae6-fe0e-41b4-8246-4e64aaea3033"
+        "outputId": "cf0eae7c-d48b-4695-ddcb-4b396c4b827e"
       },
-      "execution_count": 3,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing /home/mpi/grep.h\n"
+            "Overwriting /home/mpi/grep.h\n"
           ]
         }
       ]
@@ -1125,7 +1137,7 @@
         "  std::vector<std::string> input_lines;\n",
         "\n",
         "  grep::get_lines(input_lines, argv[2]);\n",
-        "  //grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
+        "  grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
         "  //grep::print_result(local_filtered_lines, local_lines_number);\n",
         "\n",
         "  MPI_Finalize;\n",
@@ -1138,15 +1150,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c03910b1-bffe-4a49-deac-2c821c143728"
+        "outputId": "0570ed81-f88c-447e-ddaf-84d377e35bd3"
       },
-      "execution_count": 4,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing /home/mpi/grep-main.cpp\n"
+            "Overwriting /home/mpi/grep-main.cpp\n"
           ]
         }
       ]
@@ -1178,20 +1190,17 @@
         "namespace grep{\n",
         "  void get_lines(std::vector<std::string> &input_string, const std::string &file_name){\n",
         "\n",
-        "    /* get the rank of THIS process */\n",
+        "    /* get the rank and size of this communicator */\n",
         "    int rank, size;     // for storing this process' rank, and the number of processes\n",
         "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
         "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
         "\n",
-        "    int sendcounts_2[size];\n",
+        "\n",
         "    int sendcounts[size];    // array describing how many rows to send to each process\n",
         "    int displs[size];        // array describing the displacements where each segment begins\n",
         "\n",
-        "    //std::vector<char*> rows;\n",
         "    char rows[1000][81];\n",
         "    int my_num_rows;\n",
-        "    //char rows[1000][81];\n",
-        "    //std::vector<char*> my_rows;\n",
         "\n",
         "    /* only process 0 can read the whole file */\n",
         "    if (rank == 0){\n",
@@ -1200,17 +1209,10 @@
         "      \n",
         "      /* open the main file and count the total number of rows */\n",
         "      std::ifstream my_file (file_name);\n",
+        "\n",
         "      for(std::string line; std::getline (my_file, line);){\n",
-        "        //std::cout << line.length() << std::endl;\n",
-        "        //num_char_each.push_back(line.length());\n",
-        "        \n",
+        "\n",
         "        std::strcpy(rows[num_lines], line.c_str());\n",
-        "        //rows[num_lines] = r;\n",
-        "        //for(int letter=0; letter < line.length(); letter++){\n",
-        "        //  rows.push_back(line[letter]);\n",
-        "        //}\n",
-        "        //std::cout << rows[num_lines] << std::endl;\n",
-        "        //std::cout << sizeof(rows[num_lines]) << std::endl;\n",
         "        num_lines++;\n",
         "      }\n",
         "\n",
@@ -1227,7 +1229,7 @@
         "              sendcounts[i]++;\n",
         "              rem--;\n",
         "          }\n",
-        "          sendcounts[i]*=81;\n",
+        "          sendcounts[i] *= 81;\n",
         "          displs[i] = sum;\n",
         "          sum += sendcounts[i];\n",
         "\n",
@@ -1240,17 +1242,76 @@
         "      \n",
         "    }\n",
         "    MPI_Recv(&my_num_rows, 1, MPI_INT, 0, 0, MPI_COMM_WORLD, MPI_STATUS_IGNORE);\n",
-        "    std::cout << \"Process \" << rank << \" receives: \"<< my_num_rows << std::endl;\n",
+        "    \n",
         "    char my_rows[my_num_rows][81] = {};\n",
-        "    std::cout << sizeof(my_rows)/sizeof(my_rows[0]) << std::endl;\n",
+        "    \n",
         "    MPI_Barrier(MPI_COMM_WORLD);\n",
         "    MPI_Scatterv(&rows, sendcounts, displs, MPI_CHAR, &my_rows, my_num_rows*81, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
-        "    MPI_Barrier(MPI_COMM_WORLD);\n",
         "\n",
         "    for (int s=0; s < my_num_rows; s++){\n",
-        "      std::string line = my_rows[0];\n",
+        "      std::string line = my_rows[s];\n",
         "      input_string.push_back(line);\n",
         "    }\n",
+        "  }\n",
+        "\n",
+        "  void search_string(const std::vector<std::string> & input_strings,\n",
+        "                      const std::string & search_string,\n",
+        "                      lines_found &lines, unsigned &local_lines_number){\n",
+        "\n",
+        "    \n",
+        "    int rank, size;     // for storing this process' rank, and the number of processes\n",
+        "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
+        "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
+        "\n",
+        "    unsigned num_rows = input_strings.size()/81;\n",
+        "    unsigned other_rows[size];\n",
+        "    unsigned start_rows[size];\n",
+        "\n",
+        "    if(rank > 0){\n",
+        "      /* All processes except 0 sends their number of rows */\n",
+        "      std::cout << rank << \" sends : \" << num_rows << std::endl;\n",
+        "      MPI_Send(&num_rows, 1, MPI_UNSIGNED, 0, rank, MPI_COMM_WORLD);\n",
+        "    }\n",
+        "    else{\n",
+        "      /* process 0 collects the information */\n",
+        "\n",
+        "      other_rows[0] = num_rows; //his data\n",
+        "      start_rows[0] = 0;\n",
+        "\n",
+        "      for(unsigned p=1; p<size;p++){\n",
+        "        MPI_Recv(&other_rows[p], 1, MPI_UNSIGNED, p, p, MPI_COMM_WORLD, MPI_STATUS_IGNORE);\n",
+        "        std::cout << \"from \" << p << \" receive: \" << other_rows[p] << std::endl;\n",
+        "      }\n",
+        "\n",
+        "      /* now cumulative sum */\n",
+        "      for(unsigned i = 1; i < size; ++i){\n",
+        "        start_rows[i] = other_rows[i-1];\n",
+        "        start_rows[i] += start_rows[i-1];\n",
+        "      }\n",
+        "      \n",
+        "    }\n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
+        "\n",
+        "    /* and send the results */\n",
+        "    MPI_Bcast(start_rows, size, MPI_INT, 0, MPI_COMM_WORLD);\n",
+        "    local_lines_number = start_rows[rank];\n",
+        "    std::cout << \"P \" << rank << \" \" << local_lines_number << std::endl;\n",
+        "  \n",
+        "    MPI_Barrier(MPI_COMM_WORLD);\n",
+        "\n",
+        "    /* now look at each line if there is the searched string */\n",
+        "    for(unsigned i = 0; i < num_rows; i++){\n",
+        "      std::string line = input_strings[i];\n",
+        "      if(line.find(search_string) != std::string::npos){\n",
+        "        unsigned index = local_lines_number+i;\n",
+        "        lines.push_back({index, line});\n",
+        "        std::cout << local_lines_number+i << \":\" << line << std::endl;\n",
+        "      }\n",
+        "    }\n",
+        "  \n",
+        "  }\n",
+        "  void print_result(const lines_found & lines, unsigned local_lines_number){\n",
+        "    \n",
         "  }\n",
         "}"
       ],
@@ -1259,9 +1320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "225874a3-4f98-4274-cab9-d916f50e47b1"
+        "outputId": "432ed7dd-dd80-4265-bef6-687506b2de6b"
       },
-      "execution_count": 159,
+      "execution_count": 275,
       "outputs": [
         {
           "output_type": "stream",
@@ -1283,9 +1344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "edc4facc-fb0a-4d4b-e723-1931ac6cc703"
+        "outputId": "25e0c895-a2ad-4cda-c437-abe8ce46e170"
       },
-      "execution_count": 160,
+      "execution_count": 276,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,16 +1361,16 @@
       "cell_type": "code",
       "source": [
         "%cd /home/mpi\n",
-        "!mpiexec --allow-run-as-root -np 3 ./grep Dido input_file.txt"
+        "!mpiexec --allow-run-as-root -np 4 ./grep document input_file.txt"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddp3MCmr0uOd",
-        "outputId": "31aba037-55b5-46d3-e847-0fe766ff4a4f"
+        "outputId": "8858a6f2-a0b4-4cfa-be30-fd32cf4def89"
       },
-      "execution_count": 161,
+      "execution_count": 278,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,24 +1378,37 @@
           "text": [
             "/home/mpi\n",
             "The number of lines in total is: 938\n",
-            "The process 0 will reads 313 rows, that starts from index 0\n",
-            "That are 25353 char!\n",
+            "The process 0 will reads 235 rows, that starts from index 0\n",
+            "That are 19035 char!\n",
             "Send the number of rows to each process\n",
-            "The process 1 will reads 313 rows, that starts from index 25353\n",
-            "That are 25353 char!\n",
+            "The process 1 will reads 235 rows, that starts from index 19035\n",
+            "That are 19035 char!\n",
             "Send the number of rows to each process\n",
-            "The process 2 will reads 312 rows, that starts from index 50706\n",
-            "That are 25272 char!\n",
+            "The process 2 will reads 234 rows, that starts from index 38070\n",
+            "That are 18954 char!\n",
             "Send the number of rows to each process\n",
-            "Process 0 receives: 25353\n",
-            "Process 1 receives: 25353\n",
-            "Process 2 receives: 25272\n",
-            "25353\n",
-            "25272\n",
-            "25353\n",
-            "XR 1:of the ice sheet tended to scratch the rocks over which they rode. The scratches\n",
-            "XR 2:what he was supposed to do. That had been apparent from the beginning. That was\n",
-            "XR 0:There was something special about this little creature. Donna couldn't quite\n",
+            "The process 3 will reads 234 rows, that starts from index 57024\n",
+            "That are 18954 char!\n",
+            "Send the number of rows to each process\n",
+            "1 sends : 235\n",
+            "2 sends : 234\n",
+            "3 sends : 234\n",
+            "from 1 receive: 235\n",
+            "from 2 receive: 234\n",
+            "from 3 receive: 234\n",
+            "P 0 0\n",
+            "P 1 235\n",
+            "P 3 704\n",
+            "P 2 470\n",
+            "Start\n",
+            "Start\n",
+            "Found\n",
+            "Found\n",
+            "359:something else at this moment. The document I'm meant to be writing is, of\n",
+            "Found\n",
+            "Found\n",
+            "867:nobody else would believe him as well. Even if he documented what had happened\n",
+            "Start\n",
             "--------------------------------------------------------------------------\n",
             "mpiexec has exited due to process rank 1 with PID 0 on\n",
             "node 227cfcf24558 exiting improperly. There are three reasons this could occur:\n",
